--- a/configs/root_ca/openssl.cnf
+++ b/configs/root_ca/openssl.cnf
@@ -25,16 +25,16 @@ init                        = 0
 default_ca                  = CA_default
 
 [ CA_default ]
-dir                         = /srv/pki/var/hsm-root-ca-01.dum.my
-certs                       = $dir/certs
-crl_dir                     = /srv/pki/var/html
-database                    = /srv/pki/var/hsm-root-ca-01.dum.my/index
-new_certs_dir               = /srv/pki/var/html
-certificate                 = /srv/pki/var/ca/hsm-root-ca-01.dum.my.crt.pem
-serial                      = /srv/pki/var/hsm-root-ca-01.dum.my/serial
-crlnumber                   = $dir/crlnumber
-crl                         = $dir/crl.pem
-private_key                 = /srv/pki/var/hsm-root-ca-01.dum.my/private/hsm-root-ca-01.dum.my.key.pem
+dir                         = ./tmp/
+certs                       = ./tmp/
+crl_dir                     = ./tmp/
+database                    = ./tmp/index
+new_certs_dir               = ./tmp/
+certificate                 = ./tmp/root_ca.crt.pem
+serial                      = ./tmp/serial
+crlnumber                   = ./tmp/crlnumber
+crl                         = ./tmp/crl.pem
+private_key                 = ./tmp/root_ca.crt.pem
 x509_extensions             = usr_cert
 name_opt                    = ca_default
 cert_opt                    = ca_default
