wip with issue ca.

--- a/configs/issue_ca/openssl.cnf
+++ b/configs/issue_ca/openssl.cnf
@@ -34,7 +34,7 @@ certificate                 = ./tmp/issue_ca.crt.pem
 serial                      = ./tmp/issue_serial
 crlnumber                   = ./tmp/issue_crlnumber
 crl                         = ./tmp/issue_crl.pem
-private_key                 = ./tmp/issue_ca.crt.pem
+private_key                 = 0:0005
 x509_extensions             = usr_cert
 name_opt                    = ca_default
 cert_opt                    = ca_default
