--- a/configs/root_ca/openssl.cnf
+++ b/configs/root_ca/openssl.cnf
@@ -34,7 +34,7 @@ certificate                 = ./tmp/root_ca.crt.pem
 serial                      = ./tmp/serial
 crlnumber                   = ./tmp/crlnumber
 crl                         = ./tmp/crl.pem
-private_key                 = ./tmp/root_ca.crt.pem
+private_key                 = 0:0004
 x509_extensions             = usr_cert
 name_opt                    = ca_default
 cert_opt                    = ca_default
